--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
  
-  "homepage": "http://NFTCowHerd.github.io/MintingSite",
+  "homepage": "http://NFTCowHerd.github.io",
 
   "name": "nft_cow_herd_minting_dapp",
  
