--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
  
-  "homepage": "http://NFTCowHerd.github.io/",
+  "homepage": "https://nftcowherd.github.io/MintingDapp/",
 
   "name": "nft_cow_herd_minting_dapp",
  
