--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
  
-  "homepage": "https://nftcowherd.github.io/MintingDapp",
+  "homepage": "https://CowsWithStyle.github.io/minting",
 
   "name": "nft_cow_herd_minting_dapp",
  
