--- a/config/config.json
+++ b/config/config.json
@@ -12,6 +12,7 @@
   "WEI_COST": 5000000000000000000,
   "DISPLAY_COST": 5,
   "GAS_LIMIT": 285000,
+  "GAS": 0.009,
   "MARKETPLACE": "Opensea",
   "MARKETPLACE_LINK": "https://opensea.io/collection/cows-with-style",
   "SHOW_BACKGROUND": true
