--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
  
   "version": "1.0.0",
  
-  "description": "This minting dapp is used to mint cows from The NFT Cow Herd.",
+  "description": "This minting dapp is used to mint cows from Cows With Style.",
  
   "private": true,
  
