--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "HERD",
-  "name": "The NFT Cow Herd",
+  "short_name": "CWS",
+  "name": "Cows With Style",
   
   "start_url": ".",
   "display": "standalone",
