--- a/public/config/config.json
+++ b/public/config/config.json
@@ -11,8 +11,8 @@
   "MAX_SUPPLY": 1111,
   "WEI_COST": 5000000000000000000,
   "DISPLAY_COST": 5,
-  "GAS_LIMIT": 285000,
-  "GAS": 0.009,
+  "GAS_LIMIT": 285000000,
+  "GAS": 9000000,
   "MARKETPLACE": "Opensea",
   "MARKETPLACE_LINK": "https://opensea.io/collection/cows-with-style",
   "SHOW_BACKGROUND": true
