--- a/public/config/config.json
+++ b/public/config/config.json
@@ -12,6 +12,7 @@
   "WEI_COST": 5000000000000000000,
   "DISPLAY_COST": 5,
   "GAS_LIMIT": 285000000,
+  "MAX_PRIORITY_FEE": 30000000000,
 
   "MARKETPLACE": "Opensea",
   "MARKETPLACE_LINK": "https://opensea.io/collection/cows-with-style",
